--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@supabase/supabase-js": "^2.86.0",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
