--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,41 +1,55 @@
+alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+asyncpg==0.31.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
 distro==1.9.0
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.122.0
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.5.2
 fastar==0.8.0
+greenlet==3.2.4
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.11
 Jinja2==3.1.6
 jiter==0.12.0
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 openai==2.8.1
+pyasn1==0.6.1
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
+redis==7.1.0
 requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.17.0
 rignore==0.7.6
+rsa==4.9.1
 sentry-sdk==2.46.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 starlette==0.50.0
 tqdm==4.67.1
 typer==0.20.0
