--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 asyncpg==0.31.0
+bcrypt==5.0.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
@@ -30,6 +31,7 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 openai==2.8.1
+passlib==1.7.4
 pyasn1==0.6.1
 pydantic==2.12.5
 pydantic-settings==2.12.0
