--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+asyncio==4.0.0
 asyncpg==0.31.0
 bcrypt==5.0.0
 certifi==2025.11.12
