--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,8 +2,11 @@ alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+asyncio==4.0.0
 asyncpg==0.31.0
 bcrypt==5.0.0
+boto3==1.42.8
+botocore==1.42.8
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
@@ -27,6 +30,7 @@ idna==3.11
 imagekitio==4.2.0
 Jinja2==3.1.6
 jiter==0.12.0
+jmespath==1.0.1
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
@@ -39,6 +43,7 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.19.2
 PyMuPDF==1.26.6
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.20
@@ -50,6 +55,7 @@ rich==14.2.0
 rich-toolkit==0.17.0
 rignore==0.7.6
 rsa==4.9.1
+s3transfer==0.16.0
 sentry-sdk==2.46.0
 shellingham==1.5.4
 six==1.17.0
