--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           IMAGE_TAG='latest'
           IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/joblyai
 
-          docker build -t $IMAGE_NAME:$IMAGE_TAG .
+          docker build -t $IMAGE_NAME:$IMAGE_TAG -f server/Dockerfile ./server
           docker push $IMAGE_NAME:$IMAGE_TAG
