--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,29 @@
-name: FastAPI CI/CD
+name: FastAPI Deploy
 
 on:
-  push:
-    branches: [main]
+  workflow_run:
+    workflows: ["joblyai_build"]
+    types:
+      - completed
 
 jobs:
-  build-and-push:
+  deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    #   - name: Set up SSH key for deployment
+    #     uses: webfactory/ssh-agent@v0.8.0
+    #     with:
+    #       ssh-private-key: ${{ secrets.DEPLOY_SSH_KEY }}
 
-      - name: Build, tag, and push image to Docker Hub
-        run: |
-          IMAGE_TAG='latest'
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/joblyai
-
-          docker build -t $IMAGE_NAME:$IMAGE_TAG -f server/Dockerfile ./server
-          docker push $IMAGE_NAME:$IMAGE_TAG
+    #   - name: Execute deployment script
+    #     run: |
+    #       ssh -o StrictHostKeyChecking=no ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} '
+    #         cd ${{ secrets.DEPLOY_PATH }}
+    #         docker-compose pull
+    #         docker-compose up -d
+    #       '
