--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,5 +1,24 @@
-version: '3'
+version: "3"
 services:
+  app:
+    image: johnkristan/joblyai:latest
+    container_name: joblyai
+    restart: always
+    ports:
+      - "8000:8000"
+    depends_on:
+      - redis-server
+    volumes:
+      - .:/app
+
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 60
+
   redis-server:
     image: redis:latest
     container_name: redis
