--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,19 @@
-name: joblyai_build
+name: joblyai-server-build
 
 on:
   push:
-    branches: [main]
-
+    branches:
+      - production
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -16,10 +21,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build, tag, and push image to Docker Hub
-        run: |
-          IMAGE_TAG='latest'
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/joblyai
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: server/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/joblyai:latest
 
-          docker build -t $IMAGE_NAME:$IMAGE_TAG -f server/Dockerfile ./server
-          docker push $IMAGE_NAME:$IMAGE_TAG
+      - name: Logout from DockerHub
+        if: always()
+        run: docker logout
