--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./server
           file: server/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/joblyai:latest
