fixing package path issue

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,4 +10,4 @@ COPY . .
 RUN test -d src && touch src/__init__.py
 
 EXPOSE 8000
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "-m", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
