feat: job matching celery tasks

--- a/.github/workflows/ssm-parameters.yml
+++ b/.github/workflows/ssm-parameters.yml
@@ -94,3 +94,16 @@ jobs:
             --value "${{ secrets.IMAGE_KIT_URL_ENDPOINT }}" \
             --type SecureString \
             --overwrite
+
+
+          aws ssm put-parameter \
+            --name "/joblyai/prod/CELERY_BROKER_URL" \
+            --value "${{ secrets.CELERY_BROKER_URL }}" \
+            --type SecureString \
+            --overwrite
+
+          aws ssm put-parameter \
+            --name "/joblyai/prod/CELERY_BACKEND_URL" \
+            --value "${{ secrets.CELERY_BACKEND_URL }}" \
+            --type SecureString \
+            --overwrite
