--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,15 +1,21 @@
 alembic==1.17.2
+amqp==5.3.1
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 asyncio==4.0.0
 asyncpg==0.31.0
 bcrypt==5.0.0
+billiard==4.2.4
 boto3==1.42.8
 botocore==1.42.8
+celery==5.6.1
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 distro==1.9.0
 dnspython==2.8.0
 ecdsa==0.19.1
@@ -31,12 +37,15 @@ imagekitio==4.2.0
 Jinja2==3.1.6
 jiter==0.12.0
 jmespath==1.0.1
+kombu==5.6.2
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 openai==2.8.1
+packaging==25.0
 passlib==1.7.4
+prompt_toolkit==3.0.52
 pyasn1==0.6.1
 pydantic==2.12.5
 pydantic-settings==2.12.0
@@ -66,8 +75,12 @@ tqdm==4.67.1
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.38.0
 uvloop==0.22.1
+vine==5.1.0
 watchfiles==1.1.1
+wcwidth==0.2.14
 websockets==15.0.1
